--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,3 +12,5 @@
 @import "blocks/promo.scss";
 @import "blocks/header.scss";
 @import "blocks/button.scss";
+@import "blocks/advantages.scss";
+@import "blocks/title.scss";
