--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -18,6 +18,16 @@
         font-size: 16px;
         line-height: 25px;
     }
+    &_submit{
+        width: 300px;
+        height: 55px;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 25px;
+        text-align: center;
+        text-transform: uppercase;
+        color: #FFFFFF;
+    }
     &:hover{
         background: red;
     }
