--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,3 +14,7 @@
 @import "blocks/button.scss";
 @import "blocks/advantages.scss";
 @import "blocks/title.scss";
+@import "blocks/media";
+@import "blocks/consultation.scss";
+@import "blocks/forms.scss";
+@import "blocks/carousel"
