--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -28,6 +28,12 @@
         text-transform: uppercase;
         color: #FFFFFF;
     }
+    &_mini{
+        width: 131px;
+        height: 40px;
+        font-size: 14px;
+        line-height: 22px;
+    }
     &:hover{
         background: red;
     }
