--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,4 +17,6 @@
 @import "blocks/media";
 @import "blocks/consultation.scss";
 @import "blocks/forms.scss";
-@import "blocks/carousel"
+@import "blocks/carousel";
+@import "blocks/catalog";
+@import "blocks/reviews"
