--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,4 +19,6 @@
 @import "blocks/forms.scss";
 @import "blocks/carousel";
 @import "blocks/catalog";
-@import "blocks/reviews"
+@import "blocks/reviews";
+@import "blocks/footer";
+@import "blocks/modal"
