--- a/src/sass/blocks/_reviews.scss
+++ b/src/sass/blocks/_reviews.scss
@@ -1,5 +1,6 @@
 .reviews{
-    min-height: 968px;
+    min-height: 918px;
+    padding-bottom: 50px;
     &-item{
         display: flex;
         margin-top: 60px;
