--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -1,6 +1,7 @@
 .advantages{
     min-height: 470px;
     padding: 70px 0 64px 0;
+    background-color: #F6F6F6;
     &__wrapper{
         display: flex;
         justify-content: space-between;
@@ -33,6 +34,14 @@
             &:hover{
                 text-decoration: none;
             }
+        }
+    }
+    &__img{
+        &_animated{
+            animation: heartbeat 2s ease infinite;
+        }
+        &:hover{
+            animation-play-state: paused;
         }
     }
 }
