--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -2,20 +2,48 @@
     padding: 81px 0;
     &__inner{
         position: relative;
-        width: 750px;
+        width: 100%;
         margin: 0 auto;
     }
+    .slick-slide {
+        img {
+            display: block;
+            width: 550px;
+            margin: 0 auto;
+        }
+    }
+    .slick-dots{
+        width: 150px;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        margin: 0 auto;
+        justify-content: space-between;
+        align-items: center;
+        li{
+            font-size: 32px;
+            &:hover{
+                color: $main-color;
+            }
+        }
+    }
+
     .slick-next, .slick-prev{
         border: none;
-        width: 31px;
-        height: 50px;
         position: absolute;
         top: 50%;
-        left: -66px;
         transform: translateY(-50%);
+        background-color: #fff;
+        img{
+            width: 31px;
+            height: 50px;
+        }
     }
     .slick-next{
-        right: -66px;
+        right: 0px;
         left: auto;
     }
+}
+#slick-slide-control00, #slick-slide-control01, #slick-slide-control02{
+    display: none;
 }
