--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,3 +1,17 @@
+@media(max-width: 1200px){
+    .footer{
+        &__info{
+            width: 390px;
+            height: 240px;
+        }
+        &__address{
+            font-size: 17px;
+        }
+        &__social{
+            margin-top: 30px;
+        }
+    }
+}
 @media (max-width: 991px){
     .container{
         max-width: 688px;
@@ -6,6 +20,43 @@
         &__item{
             width: 218px;
         }
+        &__descr{
+            font-size: 13px;
+        }
+    }
+    .footer{
+        &__info{
+            width: 340px;
+            height: 200px;
+        }
+        &__address{
+            font-size: 14px;
+            margin-bottom: 18px;
+        }
+        &__phone{
+            font-size: 17px;
+        }
+        &__social{
+            margin-top: 30px;
+        }
+        &__social-item{
+            width: 43px;
+            height: 43px;
+        }
+    }
+    .title{
+        &_left{
+            font-size: 32px;
+        }
+    }
+    .reviews-item{
+        &__review{
+            font-size: 14px;
+        }
+    }
+    .pageup{
+        bottom: 30px;
+        right: 30px;
     }
 }
 @media (max-width: 767px){
@@ -24,19 +75,27 @@
         }
     }
     .container{
-        max-width: 570px;
+        max-width: 540px;
     }
     .header{
         &__logo{
             width: 33%;
         }
         &__official{
+            font-size: 10px;
             width: 33%;
+            span{
+                font-size: 15px;
+            }
         }
         &__contacts{
+            width: 33%;
             a{
-                font-size: 17px;
+                font-size: 16px;
             }
+        }
+        .button{
+            width: 142px;
         }
     }
     .advantages{
@@ -49,32 +108,60 @@
             width: 187px;
         }
         &__descr{
-            font-size: 12px;
+            font-size: 11px;
         }
         &__subtitle{
+            font-size: 16px;
+        }
+    }
+    .consultation{
+        padding: 60px 0 65px 0;
+        &__descr{
             font-size: 17px;
         }
     }
-}
-@media (max-width: 575px){
-    .promo{
-        &__header{
-            font-size: 24px;
+    .catalog{
+        &__tab{
+            div{
+                font-size: 15px;
+            }
         }
-        &__subheader{
-            font-size: 14px;
-        }
-        &__icons{
-            width: 100%;
-            justify-content: space-around;
-        }
-        &__icon{
-            font-size: 11px;
-        }
-        &__link{
-            font-size: 13px;
+        &-item{
+            width: 255px;
+            &__descr{
+                font-size: 12px;
+            }
+            &__price{
+                font-size: 15px;
+            }
+            &__old-price{
+                font-size: 11px;
+            }
         }
     }
+    .reviews-item{
+        margin-top: 42px;
+        &__img{
+            margin-right: 35px;
+            img{
+                width: 100px;
+            }
+        }
+    }
+    .title{
+        &_left{
+            font-size: 25px;
+        }
+    }
+    .button{
+        &_mini{
+            width: 105px;
+            height: 34px;
+        }
+    }
+
+}
+@media (max-width: 575px){
     .header{
         justify-content: space-around;
         &__official{
@@ -85,27 +172,117 @@
         }
         &__contacts{
             a{
-                font-size: 15px;
+                font-size: 11px;
+            }
+        }
+        .button{
+            width: 100px;
+            height: 22px;
+            font-size: 9px;
+            margin-top: 2px;
+        }
+    }
+    .promo{
+        &__header{
+            font-size: 22px;
+        }
+        &__subheader{
+            font-size: 13px;
+        }
+        &__icons{
+            width: 100%;
+            justify-content: space-around;
+            margin-top: 36px;
+        }
+        &__icon{
+            font-size: 11px;
+        }
+        &__link{
+            font-size: 13px;
+        }
+    }
+    .advantages{
+        &__wrapper{
+            margin-top: 20px;
+            flex-direction: column;
+            align-items: center;
+        }
+        &__item{
+            img{
+                margin-top: 20px;
+            }
+        }
+        &__img{
+            &_animated{
+                animation: none;
+            }
+        }
+        &__descr{
+            margin-top: 8px;
+        }
+        &__subtitle{
+            margin-top: 25px;
+        }
+    }
+    .consultation{
+        min-height: 500px;
+        &__descr{
+            font-size: 14px;
+            text-align: center;
+        }
+        .feed-form{
+            align-items: center;
+            input{
+                width: 280px;
+                height: 45px;
+                font-size: 12px;
             }
         }
     }
+    .carousel{
+        padding: 50px 0;
+        .slick-slide{
+            img{ 
+                width: 280px;
+            }
+        }
+    }
+    .catalog{
+        &__tabs{
+            //justify-content: space-between;
+            margin-top: 25px;
+            li{
+                width: 80px;
+                height: 45px;
+                div{
+                    font-size: 8px;
+                }
+            }
+        }
+
+    }
     .button{
-        font-size: 11px;
-        width: 135px;
-        height: 25px;
         &_main{
-            margin-top: 36px;
-            width: 180px;
-            height: 35px;
+            margin-top: 50px;
+            width: 220px;
+            height: 42px;
+            font-size: 15px;
+        }
+        &_submit{
+            width: 280px;
+            height: 45px;
+            font-size: 15px;
         }
     }
     .title{
         font-size: 24px;
-    }
-    .advantages{
-        &__wrapper{
-            flex-direction: column;
-            align-items: center;
+        &_left{
+            font-size: 18px;
+            line-height: 30px;
+            text-align: center;
+        }
+        &_small{
+            font-size: 28px;
         }
     }
 }
