--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -11,7 +11,7 @@
     padding: 35px 40px 40px 40px;
     top: 0;
     width: 382px;
-    height: 402px;
+    min-height: 402px;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -44,6 +44,14 @@
     }
     &_mini{
         min-height: 143px;
+    }
+    .error{
+        border: 1px solid red;
+    }
+    label.error{
+        border: none;
+        text-align: center;
+        margin-bottom: 15px;
     }
 }
 #consultation, #order, #thanks{
