--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import "base/variables";
+@import "base/animation";
 
 *{
 	font-family: 'Museo Sans Cyrl', sans-serif;
@@ -14,11 +15,12 @@
 @import "blocks/button.scss";
 @import "blocks/advantages.scss";
 @import "blocks/title.scss";
-@import "blocks/media";
 @import "blocks/consultation.scss";
 @import "blocks/forms.scss";
 @import "blocks/carousel";
 @import "blocks/catalog";
 @import "blocks/reviews";
 @import "blocks/footer";
-@import "blocks/modal"
+@import "blocks/modal";
+@import "blocks/pageup";
+@import "blocks/media";
