--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -376,5 +376,11 @@
                 width: 250px;
             }
         }
+        &_mini{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
     }
 }
