--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -18,7 +18,7 @@
         transform: skew(-25deg);
         margin: 5px;
         cursor: pointer;
-        transition: 0.4s all;
+        transition: 0.3s all;
         &:hover{
             box-shadow: 2px 2px 15px $main-color;
             border: none;
@@ -89,6 +89,7 @@
             color: $main-color;
             &:hover{
                 color: $main-color;
+                text-decoration: none;
             }
         }
         &__back{
@@ -107,12 +108,13 @@
             color: $main-color;
             &:hover{
                 color: $main-color;
+                text-decoration: none;
             }
         }
         hr{
-            margin: 18px 0;
+            border: none;
             background-color: #E8E8E8;
-            border-bottom: none;
+            margin: 18px 0;
         }
         &__footer{
             display: flex;
@@ -154,28 +156,30 @@
             margin-left: 20px;
             transform: translateX(0%);
             transition: 0.6s all;
-            padding: 0 20px;
-            margin-bottom: 0;
-            list-style-type: none;
             &_active{
                 margin-left: 0;
                 transform: translateX(-100%);
             }
-            li{
-                position: relative;
-                margin-bottom: 3px;
-                font-weight: 300;
-                font-size: 14px;
-                line-height: 21px;
-                color: #555555;
-                &:before{
-                    content: '';
-                    position: absolute;
-                    left: -14px;
-                    top: 7px;
-                    width: 5px;
-                    height: 5px;
-                    background-color: $main-color;
+            ul{
+                padding: 0 20px;
+                margin-bottom: 0;
+                list-style-type: none;
+                li{
+                    position: relative;
+                    margin-bottom: 3px;
+                    font-weight: 300;
+                    font-size: 14px;
+                    line-height: 21px;
+                    color: #555555;
+                    &:before{
+                        content: '';
+                        position: absolute;
+                        left: -14px;
+                        top: 7px;
+                        width: 5px;
+                        height: 5px;
+                        background-color: $main-color;
+                    }
                 }
             }
         }
