--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -39,12 +39,17 @@
             justify-content: center;
             align-items: center;
             width: 53px;
-            height: 52px;
+            height: 53px;
             border: 2px solid #FFFFFF;
             border-radius: 100%;
             margin: 0 13px;
             img{
                 height: 25px;
+            }
+            &:hover{
+                img{
+                    height: 30px;
+                }
             }
         }
     }
