--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -36,7 +36,7 @@
             text-align: right;
             color: #FFFFFF;
             &:hover{
-                color:black;
+                color: $main-color;
             }
         }
     }
