--- a/src/sass/libs/font.scss
+++ b/src/sass/libs/font.scss
@@ -1,5 +1,6 @@
 @font-face {
 	font-family: 'Museo Sans Cyrl';
+	font-display: swap;
 	src: local('MuseoSansCyrl-500'),
 		url('../fonts/MuseoSansCyrl-500.woff') format('woff');
 	font-weight: 500;
@@ -7,6 +8,7 @@
 }
 @font-face {
 	font-family: 'Museo Sans Cyrl';
+	font-display: swap;
 	src: local('MuseoSansCyrl-300'),
 		url('../fonts/MuseoSansCyrl-300.woff') format('woff');
 	font-weight: 300;
@@ -14,6 +16,7 @@
 }
 @font-face {
 	font-family: 'Museo Sans Cyrl';
+	font-display: swap;
 	src: local('MuseoSansCyrl-700'),
 		url('../fonts/MuseoSansCyrl-700.woff') format('woff');
 	font-weight: 700;
